# pytogether

./: .gitignore  cli
backend/: pyproject.toml
backend/codes/: consumers.py
backend/projects/: views.py
frontend/reactapp/: package-lock.json  package.json  vite.config.js
frontend/reactapp/public/: worker.js
frontend/reactapp/src/: App.jsx
frontend/reactapp/src/components/: CodeLayout.jsx  SharedProjectHandler.jsx
frontend/reactapp/src/hooks/: useTsRunner.js
frontend/reactapp/src/pages/: OfflinePlayground.jsx  PyIDE.jsx
frontend/reactapp/src/tsrunner/: TaskClient.js  Worker.js
terraform/: .gitignore  README.md  deploy-with-registry.sh  deploy.sh  docker-compose.prod.yaml  outputs.tf  server.tf  ssh.tf  terraform.tf  terraform.tfvars.example  user_data.yml  variables.tf
