[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "amqp==5.3.1",
    "asgiref==3.9.1",
    "attrs==25.3.0",
    "autobahn==24.4.2",
    "automat==25.4.16",
    "billiard==4.2.1",
    "celery==5.5.3",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "channels==4.3.1",
    "channels-redis==4.3.0",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "constantly==23.10.4",
    "cron-descriptor==1.4.5",
    "cryptography==45.0.6",
    "daphne==4.2.1",
    "dj-rest-auth==7.0.1",
    "django==5.2.5",
    "django-allauth==65.10.0",
    "django-celery-beat==2.8.1",
    "django-cors-headers==4.7.0",
    "django-redis==6.0.0",
    "django-timezone-field==7.1",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "environs==14.3.0",
    "h11==0.16.0",
    "hyperlink==21.0.0",
    "idna==3.10",
    "incremental==24.7.2",
    "kombu==5.5.4",
    "marshmallow==4.0.0",
    "msgpack==1.1.1",
    "oauthlib==3.3.1",
    "packaging==25.0",
    "prompt-toolkit==3.0.51",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pyjwt==2.10.1",
    "pyopenssl==25.1.0",
    "python-crontab==3.3.0",
    "python-dateutil==2.9.0.post0",
    "python-decouple==3.8",
    "python-dotenv==1.1.1",
    "redis==6.4.0",
    "requests==2.32.4",
    "service-identity==24.2.0",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "twisted==25.5.0",
    "txaio==25.6.1",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "y-py==0.6.2",
    "zope-interface==7.2",
]
